# aws-deployment

./: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
auth_blog/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
auth_blog/migrations/: 0001_initial.py
auth_prod_api/: asgi.py  settings.py  urls.py  wsgi.py
